<package>
  <name>robotiq</name>
  <version>1.0.0</version>
  <description>Code to control and visualize Robotiq grippers</description>
  <maintainer email="ttan@elektro.dtu.dk">Thomas Timm Andersen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Nicolas Lauzier (Robotiq inc.)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>robotiq_s_model_visualization</run_depend>
  <run_depend>robotiq_modbus_tcp</run_depend>
  <run_depend>robotiq_c_model_control</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>

  <!-- Dependencies needed only for running tests. -->


  <export>
    <metapackage/>
  </export>




</package>
