<package>
  <name>robotiq_c_model_control</name>
  <version>1.0.0</version>
  <description>Package to control a C-Model Gripper from Robotiq inc.</description>
  <maintainer email="ttan@elektro.dtu.dk">Thomas Timm Andersen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robotiq_c_model_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Nicolas Lauzier (Robotiq inc.)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robotiq_modbus_tcp</run_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>
